Teste atualização(Tibetano)

--- a/TCD-DevWeb/pom.xml
+++ b/TCD-DevWeb/pom.xml
@@ -32,7 +32,7 @@
                 <version>3.1</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.source}</target>
+                    <target>${maven.compiler.target}</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
